--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             Software Developer
         </p>
         <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('https://drive.google.com/file/d/1E48D4deZ_fNmK5AkqgrymcEN1pnXvTuo/view?usp=sharing')">Download CV</button>
+            <button class="btn btn-color-2" onclick="window.open('./assets/Resume-example.pdf')">Download CV</button>
             <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Me</button>
         </div>
         <div id="socials-container">
@@ -327,4 +327,5 @@
 
 </body>
 </html>
+
 
