--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="text-container">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus officia aperiam dolores, ipsum mollitia ad! Vero error iusto a beatae quisquam sequi reiciendis voluptas dignissimos? Voluptas placeat earum dignissimos. Facilis.
+            Beyond technical skills, I enjoy learning continuously, collaborating with teams, and building solutions that improve users’ lives. My goal is to keep growing as a frontend engineer while contributing to impactful projects.
             </p>
         </div>
         </div>
@@ -327,5 +327,6 @@
 
 </body>
 </html>
+
 
 
